MB-49977: Add configuration for auxio and nonio threads

The executor pool also contains a pool of threads for
auxio and nonio tasks. Allow them to be tuned through the
configuration file.

Change-Id: Iacdefbc56c0e2635c821e22f7508d52de0838609
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/167498
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>