include/memcached/engine.h
@@ -198,6 +198,14 @@ struct MEMCACHED_PUBLIC_CLASS EngineIface {
         // ignored
     }
 
+    virtual void set_num_auxio_threads(size_t num) {
+        // ignored
+    }
+
+    virtual void set_num_nonio_threads(size_t num) {
+        // ignored
+    }
+
     // Set the number of storage threads
     virtual void set_num_storage_threads(
             ThreadPoolConfig::StorageThreadCount num) {
